Added a project section

--- a/index.html
+++ b/index.html
@@ -31,50 +31,58 @@
     </section>
 
     <section>
-      <h2>Experience</h2>
+      <h2>Current Position</h2>
 
       <div class="job-card">
-        <h3>Exoplanet Habitability Analysis Research</h3>
-        <p><em>Self-Directed | June 2024 – August 2024</em></p>
+        <h3>First Wave AI</h3>
+        <p><em>API Developer | September 2025 – Present</em></p>
         <ul>
-          <li>Analyzed NASA datasets with SQL & Python, identifying 50 candidate planets</li>
-          <li>Developed cleaning processes improving accuracy by 70%</li>
-          <li>Created visualizations and statistical summaries</li>
+          <li>Built backend API pipelines using Python, TypeScript, and PostgreSQL, wrapping a conversational AI around
+            core APIs, increasing programming productivity by 10 hours per week</li>
+          <li>Validated and mapped hotel operation flows (availability, booking, change/cancel, check-in/out, webhooks)
+            against a mock OPERA-style API to confirm data is relayed accurately before connecting to OHIP</li>
+          <li>Collaborated with a small team to deliver backend services to the platform, creating long-term solutions that are
+            scalable and maintainable</li>
         </ul>
       </div>
+    </section>
 
-      <div class="job-card">
-        <h3>Lab-Based Research – Cornell University </h3>
-        <p><em>Research Student | July 2023 – December 2023</em></p>
-        <ul>
-          <li>Conducted hands-on experiments with Arduino microcontrollers, analyzing circuit performance</li>
-          <li>Investigated limitations in circuit behavior and suggested design modifications</li>
-          <li>Presented project outcomes at a student colloquium, communicating technical findings</li>
-        </ul>
-      </div>
+    <section>
+      <h2>Projects</h2>
 
-      <div class="job-card">
-        <h3>NYC Department of Buildings </h3>
-        <p><em>Operations Intern | July 2022 – August 2022</em></p>
-        <ul>
-          <li>Processed and audited large inspection datasets, improving accuracy</li>
-          <li>Automated QA with Python, reducing errors by 30%</li>
-          <li>Streamlined cross-team workflows and reconciliation reports</li>
-        </ul>
-      </div>
-      
-      <div class="job-card">
-        <h3>Additional Roles</h3>
-        <p>Undergraduate Teaching Assistant, Treasurer (CUSP Club), Research Intern (AMNH), SEO Scholar</p>
+      <div class="project-card">
+        <div class="project-header">
+          <h3>AR & Operations Work-Queue Dashboard</h3>
+          <div class="project-links">
+            <a href="https://cashflow-ops-dashboard.streamlit.app" target="_blank" class="project-link">Live Demo</a>
+            <a href="https://github.com/andres-rm08/cashflow-ops-dashboard" target="_blank" class="project-link">GitHub</a>
+          </div>
+        </div>
+        <p><em>This project is an AR and operations work-queue dashboard that merges 200+ ops tickets with AR/billing exceptions and client tiers, applies an adjustable finance-first scoring model to rank the queue, and exports CSV/BI views with KPIs to speed collections and SLA follow-up</em></p>
+        <div class="project-content">
+          <div class="project-image">
+            <a href="https://cashflow-ops-dashboard.streamlit.app" target="_blank">
+              <img src="images/ops_pro.png" alt="AR & Ops Project Screenshot" class="project-screenshot">
+            </a>
+          </div>
+          <div class="project-details">
+            <p><strong>Technologies:</strong> Python, SQL, Tableau, Streamlit</p>
+            <ul>
+              <li>Built a Python pipeline that merges 200+ ops tickets (SLA, owner, age) with AR, billing/data-quality exceptions, and client tiers to create a ranked work queue</li>
+              <li>Developed a finance-first scoring model (cash urgency, SLA risk, invoicing blocks, client priority) with adjustable weights to highlight the 20 highest-cash-impact items per cycle and reduce time-to-collection</li>
+              <li>Deployed a Streamlit dashboard and a Tableau view with AR KPIs and exportable top-items lists showing $1.39M in AR, $599K past due, and $261K on hold to support SLA follow-up and cut manual triage</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
     <section>
       <h2>Skills</h2>
       <ul>
-        <li><strong>Programming:</strong> Python (Pandas, NumPy), SQL, R</li>
+        <li><strong>Programming:</strong> Python, SQL, R, TypeScript</li>
         <li><strong>Data Tools:</strong> Tableau, Excel, Google Workspace</li>
-        <li><strong>Languages:</strong> Spanish (proficient)</li>
+        <li><strong>Languages:</strong> English, Spanish</li>
       </ul>
     </section>
   </main>
