Made stylistic changes to project section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           </div>
           <div class="project-details">
             <p><strong>Technologies:</strong> Python, SQL, Tableau, Streamlit</p>
+            <p><strong>Outcomes:</strong></p>
             <ul>
               <li>Built a Python pipeline that merges 200+ ops tickets (SLA, owner, age) with AR, billing/data-quality exceptions, and client tiers to create a ranked work queue</li>
               <li>Developed a finance-first scoring model (cash urgency, SLA risk, invoicing blocks, client priority) with adjustable weights to highlight the 20 highest-cash-impact items per cycle and reduce time-to-collection</li>
