Added additional project

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
           </div>
           <div class="project-details">
-            <p><strong>Technologies:</strong> Python, SQL, Tableau, Streamlit</p>
+            <p><strong>Technologies:</strong> Python, Tableau, Streamlit</p>
             <p><strong>Outcomes:</strong></p>
             <ul>
               <li>Built a Python pipeline that merges 200+ ops tickets (SLA, owner, age) with AR, billing/data-quality exceptions, and client tiers to create a ranked work queue</li>
@@ -77,6 +77,34 @@
         </div>
       </div>
     </section>
+
+    <div class="project-card">
+      <div class="project-header">
+        <h3>Market Data ETL & Analytics Dashboard</h3>
+        <div class="project-links">
+          <a href="https://crypto-correlation-analysis.streamlit.app" target="_blank" class="project-link">Live Demo</a>
+          <a href="https://github.com/andres-rm08/crypto-correlation-analysis" target="_blank" class="project-link">GitHub</a>
+        </div>
+      </div>
+      <p><em>This project is an AR and operations work-queue dashboard that merges 200+ ops tickets with AR/billing exceptions and client tiers, applies an adjustable finance-first scoring model to rank the queue, and exports CSV/BI views with KPIs to speed collections and SLA follow-up</em></p>
+      <div class="project-content">
+        <div class="project-image">
+          <a href="https://crypto-correlation-analysis.streamlit.app" target="_blank">
+            <img src="images/crypto_pro.png" alt="Crypto Project Screenshot" class="project-screenshot">
+          </a>
+        </div>
+        <div class="project-details">
+          <p><strong>Technologies:</strong> Python, SQL, Streamlit</p>
+          <p><strong>Outcomes:</strong></p>
+          <ul>
+            <li>Designed a Python/SQLite pipeline that ingests 365 days of prices for 30 assets and preserves data integrity with a unique (coin_id, timestamp) index</li>
+            <li>Computed daily returns, volatility, 7/30-day momentum, and other metrics; built a cross-asset correlation matrix; used z-scores for a risk-adjusted ranking</li>
+            <li>Deployed a Streamlit dashboard for risk-vs-return analysis using an overview table, risk-vs-volatility scatter plot, correlation heatmap, and ranked recommendations</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
     <section>
       <h2>Skills</h2>
